[package]
name = "kp"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.23", features = ["serde"] }
jsonc-parser = { version = "0.27.0", features = ["serde"] }
